footer fixed on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,10 +12,18 @@
     display: inherit;
     height: fit-content;
     min-height: 100vh;
-    padding-bottom: 50px;
+    // padding-bottom: 50px;
+  }
+
+  #contents {
+    padding-bottom: 60px;
   }
 }
 
 #root {
+  position: relative;
+}
+
+#contents {
   position: relative;
 }
